--- a/css/voyages.css
+++ b/css/voyages.css
@@ -1,3 +1,22 @@
 body{
     width: 100%;
 }
+
+#container {
+    text-align: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-flex {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-separate {
+    margin: 20px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: 25px;
+}
