--- a/css/voyages.css
+++ b/css/voyages.css
@@ -52,8 +52,8 @@ footer p {
 }
 .column p{ font-size: 15px;}
 .column h5{font-size: 20px;}
-.bottom_border { 
-    border-bottom:1px solid #323f45; 
+.top_border { 
+    border-top:1px solid #323f45; 
     padding-bottom:20px;
 }
 .footer_fin {
