--- a/css/voyages.css
+++ b/css/voyages.css
@@ -1,22 +1,62 @@
 body{
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-#container {
+
+/****************************INDEX***************************************/
+
+.flex-header {
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    position: relative;
+}
+
+.bg-img {
+    opacity: 0.8;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 250px;
+}
+
+.title-header {
+    position: absolute;
+    left: 800px;
+    top: 80px;
+    font-size: 200%;
+}
+
+/****************************CONTACT***************************************/
+
+#contact-body {
+    background-image: url("/image/form-image.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+#contact-container {
     text-align: center;
-    width: 80%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .form-flex {
     display: flex;
     flex-direction: column;
+    color: #FFF;
 }
 
 .form-separate {
     margin: 20px;
     padding-top: 1%;
     padding-bottom: 1%;
-    border-radius: 25px;
+    border-radius: 10px;
 }
