--- a/css/voyages.css
+++ b/css/voyages.css
@@ -1,5 +1,6 @@
 body{
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -8,27 +9,21 @@ body{
 /****************************INDEX***************************************/
 
 .flex-header {
+    background-image: url("/image/header-pic.jpg");
     width: 100%;
-    height: 250px;
-    overflow: hidden;
-    position: relative;
-}
-
-.bg-img {
-    opacity: 0.8;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 250px;
 }
 
 .title-header {
-    position: absolute;
-    left: 800px;
-    top: 80px;
-    font-size: 200%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 250px;
+    font-size: 300%;
+    color: #FFFFFF;
+    font-family: 'Josefin Sans', sans-serif;
 }
+
 
 /****************************CONTACT***************************************/
 
