ajout bacgkround-repeat: no-repeat

--- a/css/voyages.css
+++ b/css/voyages.css
@@ -10,6 +10,7 @@ body{
 
 .flex-header {
     background-image: url("/image/header-pic.jpg");
+    background-repeat: no-repeat;
     width: 100%;
 }
 
