--- a/css/voyages.css
+++ b/css/voyages.css
@@ -9,9 +9,9 @@ body{
 /****************************INDEX***************************************/
 
 .flex-header {
-    background-image: url("/image/header-pic.jpg");
+    background-image: url("/images/header-pic.jpg");
     background-repeat: no-repeat;
-    width: 100%;
+    width: 100vw;
 }
 
 .title-header {
