--- a/css/voyages.css
+++ b/css/voyages.css
@@ -75,6 +75,10 @@ header{
     padding: 0;
 }
 
+.sous-menu li{
+    background-color: #1ca4e4;
+}
+
 .sous-menu li:hover{
     background: #1ca4e4;
     color: #fff;
