--- a/css/canada.css
+++ b/css/canada.css
@@ -1,4 +1,6 @@
 body{
+    width: 100%;
+    height: auto;
     overflow-x: hidden;
 }
 
@@ -6,13 +8,40 @@ main{
     min-height: 70vw;
 }
 .section-flex{
+    
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding: 3rem;
 }
+
+.section-flex h2{
+    font-family: 'Lora', serif;
+    font-size: 70px ;
+    margin-bottom: 2rem;
+}
+
+.section-flex p{
+    font-family: 'Martel', serif;
+    font-size: 25px;
+    margin-left: 2rem;
+}
+
+.article{
+    max-width: 90%;
+    justify-self: center;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 25px ;
+    backdrop-filter: blur(50px);
+    color: white;
+}
+
+/******************************************** Carousel *************************************/
 #carousel{
+    display: flex;
     width: 100%;
-    height: 750px;
+    min-height: 900px;
     background-image: url("../image/canada/carousel.jpg");
     background-size: cover;
 }
@@ -49,7 +78,7 @@ main{
   .pic-ctn > img {
     max-width:70%;
     height: 700px;
-    margin-top: 1%;
+    margin-top: 5%;
     position: absolute;
     box-shadow: 0 0 30px rgba(156, 155, 155, 0.699);
     top: 0;
@@ -69,3 +98,14 @@ main{
   img:nth-child(5) {
     animation-delay: 8s;
   }
+
+
+/******************************************** Niagara *************************************/
+
+  #niagara{
+    width: 100%;
+    height: 750px;
+    background-image: url("../image/canada/niagarawall.jpg");
+    background-size: cover;
+  }
+
