--- a/css/canada.css
+++ b/css/canada.css
@@ -1,111 +1,114 @@
 body{
-    width: 100%;
-    height: auto;
-    overflow-x: hidden;
+  width: 100%;
+  height: auto;
+  overflow-x: hidden;
 }
 
 main{
-    min-height: 70vw;
+  min-height: 70vw;
 }
 .section-flex{
-    
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 3rem;
 }
 
 .section-flex h2{
-    font-family: 'Lora', serif;
-    font-size: 70px ;
-    margin-bottom: 2rem;
+  font-family: 'Lora', serif;
+  font-size: 70px ;
+  margin-bottom: 2rem;
 }
 
 .section-flex p{
-    font-family: 'Martel', serif;
-    font-size: 25px;
-    margin-left: 2rem;
+  max-width: 95%;
+  font-family: 'Martel', serif;
+  font-weight: bold;
+  font-size: 25px;
+  margin-left: 2rem;
 }
 
 .article{
-    max-width: 90%;
-    justify-self: center;
-    padding: 1rem;
-    border: 1px solid black;
-    border-radius: 25px ;
-    backdrop-filter: blur(50px);
-    color: white;
+  max-width: 90%;
+  justify-self: center;
+  margin-top: 7rem;
+  margin-left: 3rem;
+  padding: 1rem;
+  border: 1px solid black;
+  border-radius: 25px ;
+  backdrop-filter: blur(30px);
+  color: black;
 }
 
 /******************************************** Carousel *************************************/
 #carousel{
-    display: flex;
-    width: 100%;
-    min-height: 900px;
-    background-image: url("../image/canada/carousel.jpg");
-    background-size: cover;
+  display: flex;
+  width: 100%;
+  min-height: 900px;
+  background-image: url("../image/canada/carousel.jpg");
+  background-size: cover;
 }
 
-  .pic-ctn {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
-  
-  @keyframes display {
-    0% {
-      transform: translateX(200px);
-      opacity: 0;
-    }
-    10% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    20% {
-      transform: translateX(0);
-      opacity: 1;
-    }
-    30% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateX(-200px);
-      opacity: 0;
-    }
-  }
-  
-  .pic-ctn > img {
-    max-width:70%;
-    height: 700px;
-    margin-top: 5%;
-    position: absolute;
-    box-shadow: 0 0 30px rgba(156, 155, 155, 0.699);
-    top: 0;
+.pic-ctn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+@keyframes display {
+  0% {
+    transform: translateX(200px);
     opacity: 0;
-    animation: display 10s infinite;
   }
-  
-  img:nth-child(2) {
-    animation-delay: 2s;
+  10% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  img:nth-child(3) {
-    animation-delay: 4s;
+  20% {
+    transform: translateX(0);
+    opacity: 1;
   }
-  img:nth-child(4) {
-    animation-delay: 6s;
+  30% {
+    transform: translateX(-200px);
+    opacity: 0;
   }
-  img:nth-child(5) {
-    animation-delay: 8s;
+  100% {
+    transform: translateX(-200px);
+    opacity: 0;
   }
+}
+
+.pic-ctn > img {
+  max-width:70%;
+  height: 700px;
+  margin-top: 5%;
+  position: absolute;
+  box-shadow: 0 0 30px rgb(255, 255, 255);
+  top: 0;
+  opacity: 0;
+  animation: display 10s infinite;
+}
+
+img:nth-child(2) {
+  animation-delay: 2s;
+}
+img:nth-child(3) {
+  animation-delay: 4s;
+}
+img:nth-child(4) {
+  animation-delay: 6s;
+}
+img:nth-child(5) {
+  animation-delay: 8s;
+}
 
 
 /******************************************** Niagara *************************************/
 
-  #niagara{
-    width: 100%;
-    height: 750px;
-    background-image: url("../image/canada/niagarawall.jpg");
-    background-size: cover;
-  }
+#niagara{
+  width: 100%;
+  height: 750px;
+  background-image: url("../image/canada/niagarawall.jpg");
+  background-size: cover;
+}
 
