--- a/css/canada.css
+++ b/css/canada.css
@@ -12,6 +12,7 @@ main{
   flex-direction: column;
   flex-wrap: wrap;
   padding: 3rem;
+  box-shadow: 0 0 50px rgb(7, 7, 7);
 }
 
 .section-flex h2{
@@ -30,15 +31,19 @@ main{
 
 .article{
   max-width: 90%;
-  justify-self: center;
-  margin-top: 7rem;
-  margin-left: 3rem;
   padding: 1rem;
   border: 1px solid black;
   border-radius: 25px ;
   backdrop-filter: blur(30px);
   color: black;
 }
+
+#canada-main{
+  background-image: url("../image/canada/canadamainwall.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 
 /******************************************** Carousel *************************************/
 #carousel{
@@ -104,11 +109,72 @@ img:nth-child(5) {
 
 
 /******************************************** Niagara *************************************/
-
 #niagara{
   width: 100%;
-  height: 750px;
+  max-height: 750px;
+  margin-top: 15rem;
+  padding-top: 3rem;
+  padding-left: 3rem;
   background-image: url("../image/canada/niagarawall.jpg");
   background-size: cover;
 }
 
+#niagara p, #niagara a{
+  color: white;
+}
+
+
+/******************************************** Quebec *************************************/
+#quebec{
+  width: 100%;
+  height: 750px;
+  margin-top: 15rem;
+  padding-top: 7rem;
+  padding-left: 3rem;
+  background-image: url("../image/canada/quebecwall.jpg");
+  background-size: cover;
+}
+
+
+/******************************************** Toronto *************************************/
+#toronto{
+  width: 100%;
+  height: 750px;
+  margin-top: 15rem;
+  padding-top: 8rem;
+  padding-left: 5rem;
+  background-image: url("../image/canada/torontowall.jpg");
+  background-size: cover;
+}
+
+#toronto p, #toronto h2{
+  color: white;
+}
+
+
+/******************************************** Ottawa *************************************/
+#ottawa{
+  width: 100%;
+  height: 750px;
+  margin-top: 15rem;
+  padding-top: 9rem;
+  padding-left: 5rem;
+  background-image: url("../image/canada/ottawawall.jpg");
+  background-size: cover;
+}
+
+
+/******************************************** Montreal *************************************/
+#montreal{
+  width: 100%;
+  height: 750px;
+  margin-top: 15rem;
+  padding-top: 9rem;
+  padding-left: 5rem;
+  background-image: url("../image/canada/montrealwall.jpg");
+  background-size: cover;
+}
+
+#montreal p, #montreal h2{
+  color: white;
+}
