--- a/css/japon.css
+++ b/css/japon.css
@@ -5,30 +5,34 @@ body{
     background-color: #F4E6D9;
 }
 
+p, ul{
+    font-size: 120%;
+}
+
 .slidershow{
-    width: 100vw;
-    height: 90vh;
+    width: 99.1vw;
+    height: 53vw;
     overflow: hidden;
 }
 
 .middle{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    position: relative;
 }
 
 .navigation{
     position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 24vw;
+    top: 49vw;
     display: flex;
 }
 
 .bar{
     width: 50px;
-    height: 10px;
+    height: 0.6vw;
     border: 2px solid #fff;
     margin: 6px;
     cursor: pointer;
@@ -52,12 +56,14 @@ input[name=r]{
 
 .slide{
     width: 20%;
+    height: fit-content;
     transition: 0.6s;
 }
 
 .slide img{
     width: 100%;
     height: 100%;
+    margin-top: -12vw;
 }
 
 #r1:checked ~ .s1{
@@ -84,9 +90,35 @@ input[name=r]{
     margin-left: -101.5%;
 }
 
-
-
+.paragraphes{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
 
 .ville{
-    margin-top: 60vw;
+    background-image: url(image-japon/kyoto2.jpg);
+    margin-top: 10vw;
+}
+
+.ville, .monument, .paysage, .nourriture{
+    width: 70vmin;
+    padding: 6vw;
+    margin-bottom: 10vw;
+}
+
+.monument{
+    background-image: url(image-japon/);
+    background-color: blue;
+}
+
+.paysage{
+    background-image: url(image-japon/);
+    background-color: brown;
+}
+
+.nourriture{
+    background-image: url(image-japon/);
+    background-color: chartreuse;
 }
