--- a/css/australie.css
+++ b/css/australie.css
@@ -1,13 +1,99 @@
+*{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+/**********************MENU/HEADER**********************/
+.flex-header {
+  background-image: url("/images/header-pic.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+}
+
+.title-header {
+  display: flex;
+  align-items: center;
+  height: 250px;
+  font-size: 300%;
+  color: #FFFFFF;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+#logo{
+  max-height: 180px;
+  max-width: 180px;
+}
+
+.menu{
+  width: 100%;
+  background-color: #70CBF4;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.menu a{
+  color: #333;
+  font-size: 35px;
+}
+
+.menu > li {
+  width: 200px;
+  height: 60px;
+  line-height: 60px;
+  align-self: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Lora', serif;
+  font-size: 30px;
+  text-align: center;
+}
+
+.menu > li:hover {
+  background-color: #1ca4e4;
+}
+
+.sous-menu {
+  transform: scale(0);
+  transform-origin: top center;
+  transition: all 300ms ease-in-out;
+  z-index: 15;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.sous-menu li{
+  background-color: #1ca4e4;
+}
+
+.sous-menu li:hover{
+  background: #1ca4e4;
+  color: #fff;
+}
+
+.sous-menu li:hover a{
+  color: #fff;
+}
+
+.menu > li:hover .sous-menu {
+  transform: scale(1);
+}
 
 /**********************MAIN**********************/
 
 .title-australie {
-    display: flex;
-    justify-content: center;
-    font-family: 'Lora', serif;
-    font-size: 250%;
-    font-weight: bold;
-    color: #EEC643;
+  display: flex;
+  justify-content: center;
+  font-family: 'Lora', serif;
+  font-size: 250%;
+  font-weight: bold;
+  color: #b2b40f;
+  margin: 5rem;
 }
 
 .title-green {
@@ -284,12 +370,12 @@
     position: relative;
     flex: 0 0 100%;
     width: 100%;
-    background-color: #F4FAFF;
+    background-color: #CBFF8C;
     counter-increment: item;
   }
   
   .carousel__slide:nth-child(even) {
-    background-color: #F4FAFF;
+    background-color: #E3E36A;
   }
   
   .carousel__slide:before {
@@ -406,58 +492,3 @@
   .carousel::after {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
   }
-
-
-
-  
-/*Basic structure of slider*/
-.container{
-  width: 80rem;
-  height: 40rem;
-  position: absolute;
-  transform: translate(-50%,-50%);
-  top: 190%;
-  left: 50%;
-  overflow: hidden;
-  border: 10px solid #000000;
-  border-radius: 8px;
-  box-shadow: -1px 5px 15px black;
-}
-
-/*Area of images*/
-.wrapper{
-  width: 100%;
-  display: flex;
-  animation: slide 4s infinite;
-}
-
-.wrapper img{
-  width: 100%;
-}
-/*Animation activated by keyframes*/
-@keyframes slide {
-  0%{
-      transform: translateX(0);
-  }
-  25%{
-      transform: translateX(0);
-  }
-  30%{
-      transform: translateX(-100%);
-  }
-  50%{
-      transform: translateX(-100%);
-  }
-  55%{
-      transform: translateX(-200%);
-  }
-  75%{
-      transform: translateX(-200%);
-  }
-  80%{
-      transform: translateX(-300%);
-  }
-  100%{
-      transform: translateX(-300%);
-  }
-}
