--- a/css/australie.css
+++ b/css/australie.css
@@ -29,14 +29,14 @@
 
 .menu{
   width: 100%;
-  background-color: #70CBF4;
+  background-color: #E3E36A;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .menu a{
-  color: #333;
+  color: #000000;
   font-size: 35px;
 }
 
@@ -54,7 +54,7 @@
 }
 
 .menu > li:hover {
-  background-color: #1ca4e4;
+  background-color: #E3E36A;
 }
 
 .sous-menu {
@@ -68,11 +68,11 @@
 }
 
 .sous-menu li{
-  background-color: #1ca4e4;
+  background-color: #E3E36A;
 }
 
 .sous-menu li:hover{
-  background: #1ca4e4;
+  background: #E3E36A;
   color: #fff;
 }
 
@@ -492,3 +492,41 @@
   .carousel::after {
     background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
   }
+ /* GALLERY-IMG */
+
+.container-img {
+  margin: 1rem;
+}
+
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.image-gallery > li {
+  height: 300px;
+  cursor: pointer;
+  position: relative;
+}
+
+.image-gallery li img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  border-radius: 5px;
+}
+
+.image-gallery > li {
+  flex: 1 1 auto;
+}
+
+.image-gallery::after {
+  content: "";
+  flex-grow: 999;
+}
+
+.image-gallery:hover {
+  size: 5%;
+}
