--- a/css/canada.css
+++ b/css/canada.css
@@ -1,14 +1,12 @@
 body{
   width: 100%;
   height: auto;
-  overflow-x: hidden;
 }
 
 main{
   min-height: 70vw;
 }
 .section-flex{
-  padding: 3rem;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -31,6 +29,9 @@ main{
 
 .article{
   max-width: 90%;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  margin-left: 4rem;
   padding: 1rem;
   border: 1px solid black;
   border-radius: 25px ;
@@ -96,7 +97,7 @@ main{
 }
 
 .pic-ctn > img {
-  max-width:70%;
+  width:80%;
   height: 700px;
   margin-top: 5%;
   position: absolute;
@@ -138,10 +139,8 @@ img:nth-child(10) {
 /******************************************** Niagara *************************************/
 #niagara{
   width: 100%;
-  max-height: 750px;
+  height: fit-content;
   margin-top: 15rem;
-  padding-top: 3rem;
-  padding-left: 3rem;
   background-image: url("../image/canada/niagarawall.jpg");
   background-size: cover;
 }
@@ -154,10 +153,8 @@ img:nth-child(10) {
 /******************************************** Quebec *************************************/
 #quebec{
   width: 100%;
-  height: 750px;
+  height: fit-content;
   margin-top: 15rem;
-  padding-top: 7rem;
-  padding-left: 3rem;
   background-image: url("../image/canada/quebecwall.jpg");
   background-size: cover;
 }
@@ -169,10 +166,8 @@ img:nth-child(10) {
 /******************************************** Toronto *************************************/
 #toronto{
   width: 100%;
-  height: 750px;
+  height: fit-content;
   margin-top: 15rem;
-  padding-top: 8rem;
-  padding-left: 5rem;
   background-image: url("../image/canada/torontowall.jpg");
   background-size: cover;
 }
@@ -185,10 +180,8 @@ img:nth-child(10) {
 /******************************************** Ottawa *************************************/
 #ottawa{
   width: 100%;
-  height: 750px;
+  height: fit-content;
   margin-top: 15rem;
-  padding-top: 9rem;
-  padding-left: 5rem;
   background-image: url("../image/canada/ottawawall.jpg");
   background-size: cover;
 }
@@ -200,10 +193,8 @@ img:nth-child(10) {
 /******************************************** Montreal *************************************/
 #montreal{
   width: 100%;
-  height: 750px;
-  margin-top: 15rem;
-  padding-top: 9rem;
-  padding-left: 5rem;
+  height: fit-content;
+  margin-top: 45px;
   background-image: url("../image/canada/montrealwall.jpg");
   background-size: cover;
 }
@@ -229,6 +220,8 @@ img:nth-child(10) {
 }
 
 #title{
+  width: 100%;
+  text-align: center;
   color: #fff;
 }
 
