--- a/css/japon.css
+++ b/css/japon.css
@@ -157,6 +157,11 @@ input[name=r]{
     padding-top: 10%;
 }
 
+
+
+
+/*************************************** PARAGRAPHES *************************************/
+
 .monument{
     background-image: url(../image-japon/pavillon4.jpg);
     background-repeat: no-repeat;
