--- a/css/voyages.css
+++ b/css/voyages.css
@@ -1,11 +1,9 @@
 *{
     margin: 0;
     padding: 0;
-    width: 100%;
     list-style-type: none;
     text-decoration: none;
 }
-
 
 
 
@@ -14,17 +12,20 @@
     background-image: url("/images/header-pic.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    align-items: center;
+    height: 250px;
     width: 100vw;
 }
 
 .title-header {
     display: flex;
-    justify-content: center;
+    margin-left: 37rem;
     align-items: center;
-    height: 250px;
     font-size: 300%;
-    color: #FFFFFF;
+    color: #000000;
     font-family: 'Josefin Sans', sans-serif;
+    backdrop-filter: blur(4px);
 }
 
 #logo{
@@ -38,6 +39,8 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
   }
   
 .menu a{
@@ -167,7 +170,7 @@
 
 /****************************CONTACT***************************************/
 #contact-main {
-    background-image: url("/images/form-image.jpg");
+    background-image: url("../images/form-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
@@ -197,4 +200,101 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/*****************FOOTER***************/
+
+.contact2 {
+    color:#FFF;
+    padding-top:px ; 
+    margin-bottom:20px ;
+}
+footer { 
+    width:100%; 
+    background-color:#263238; 
+    min-height:250px; 
+    padding:10px 0px 30px 0px ;
+}
+footer p {
+    font-size:13px; 
+    color:#CCC; 
+    padding-bottom:0px; 
+    margin-bottom:8px;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.column{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 150%;
+    width: 30%;
+    padding:0% 5%;
+}
+.column img{
+    width: 50%;
+}
+#logo{
+    display: flex;
+    align-items: center;
+}
+
+.nos_service {
+    list-style-type:none;
+    padding: 0;
+}
+.nos_service li a:hover { 
+    text-decoration:none;
+}
+.nos_service li a { 
+    text-decoration: none;
+    color: #CCC;
+    font-size: 15px;
+}
+.column p{ font-size: 15px;}
+.column h5{font-size: 20px;}
+.bottom_border { 
+    border-bottom:1px solid #323f45; 
+    padding-bottom:20px;
+}
+.footer_fin {
+	list-style-type:none;
+	padding:0px;
+	display:table;
+	margin-top: 10px;
+	margin-right: auto;
+	margin-bottom: 10px;
+	margin-left: auto;
+}
+.footer_fin li { 
+    display:inline;
+}
+.footer_fin li a { 
+    color:#999; 
+    margin:0 15px;
+    text-decoration: none;
+}
+.social_media { 
+    display:table; 
+    margin:15px auto 0 auto; 
+    list-style-type:none;  
+}
+.social_media li { 
+    padding-left:20px; 
+    padding-top:10px; 
+    float:left; 
+}
+.social_media li a { 
+    color:#CCC; 
+    border:1px solid #CCC; 
+    padding:8px;
+    border-radius:50%;
+}
+.social_media li i {  
+    width:20px; 
+    height:20px; 
+    text-align:center;
 }
