--- a/css/voyages.css
+++ b/css/voyages.css
@@ -14,7 +14,7 @@ header{
 
 /******************************************** HEADER *************************************/
 .flex-header {
-    background-image: url("../image/header-pic.jpg");
+    background-image: url("../images/header-pic.jpg");
     width: 100%;
 }
 
@@ -169,7 +169,7 @@ header{
 
 /****************************CONTACT***************************************/
 #contact-body {
-    background-image: url("/image/form-image.jpg");
+    background-image: url("/images/form-image.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
