--- a/css/australie.css
+++ b/css/australie.css
@@ -183,7 +183,7 @@
 .bg-img-australie {
   padding: 0;
   margin: 0;
-  background-image: url("../images/bg-image.jpg");
+  background-image: url("../images/australie/bg-image.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
