--- a/css/canada.css
+++ b/css/canada.css
@@ -15,8 +15,8 @@ body{
 
 #canada-header h1{
   text-align: center;
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 200px;
+  font-family: 'Rum Raisin', sans-serif;
+  font-size: 150px;
 }
 
 main{
