--- a/css/voyages.css
+++ b/css/voyages.css
@@ -5,8 +5,6 @@
     text-decoration: none;
 }
 
-
-
 /******************************************** HEADER *************************************/
 .flex-header {
     background-image: url("../images/header-pic.jpg");
@@ -14,23 +12,21 @@
     background-size: cover;
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 250px;
-    width: 100vw;
+    width: 100%;
 }
 
 .title-header {
     display: flex;
-    margin-left: 37rem;
-    align-items: center;
-    font-size: 300%;
-    color: #000000;
+    padding: 2rem;
+    border: 1px solid black;
+    border-radius: 25px;
+    font-size: 500%;
+    color: #fff;
     font-family: 'Josefin Sans', sans-serif;
     backdrop-filter: blur(4px);
-}
-
-#logo{
-    max-height: 180px;
-    max-width: 180px;
+    box-shadow: 0 0 50px rgb(7, 7, 7);
 }
 
 .menu{
@@ -171,36 +167,71 @@
 
 /****************************CONTACT***************************************/
 #contact-main {
-    background-image: url("../images/form-image.jpg");
+    background-image: url("../images/formwall.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
 }
 
 #container {
-    text-align: center;
     width: 50%;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5%;
     margin-bottom: 5%;
-    backdrop-filter: blur(2px);
 }
 
 .form-flex {
     display: flex;
     flex-direction: column;
+    align-items: center;
     color: #FFF;
 }
 
 .form-separate {
-    margin: 20px;
+    margin: 1rem;
     padding-top: 1%;
     padding-bottom: 1%;
     border-radius: 10px;
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+}
+
+.form-flex label{
+    font-size: 150%;
+}
+
+.form-flex input {
+    width: 50%;
+    margin-top: 0.3rem;
+    padding: 0.5rem;
+    font-size: 100%;
+}
+
+.form-flex select{
+    margin-top: 0.3rem;
+    width: 20%;
+    text-align: center;
+    font-size: 110%;
+}
+
+.form-flex textarea {
+    width: 70%;
+    font-size: 150%;
+}
+
+#submit{
+    width: 20%;
+    font-size: 150%;
+    transition: 0.8s;
+    color: #176e10;
+}
+
+#submit:hover{
+    transform: scale(1.2);
+    color: #fff;
+    background-color: #176e10;
+    transition: 0.5s;
 }
 
 
@@ -235,18 +266,18 @@ footer p {
     flex-direction: column;
     justify-content: center;
     font-size: 150%;
-    width: 30%;
-    padding:0% 5%;
+    width: 15%;
+}
+
+#logo{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    max-height: 180px;
+    max-width: 180px;
 }
 
 .column img{
     width: 100%;
-}
-
-#logo{
-    margin-top: 3rem;
-    display: flex;
-    align-items: center;
 }
 
 .nos_service {
@@ -268,8 +299,8 @@ footer p {
 
 .column h5{font-size: 20px;}
 
-.bottom_border { 
-    border-bottom:1px solid #323f45; 
+.top_border { 
+    border-top:1px solid #323f45; 
     padding-bottom:20px;
 }
 
