--- a/css/australie.css
+++ b/css/australie.css
@@ -1,6 +1,9 @@
-
+body {
+  overflow-x: hidden;
+}
 
 /**********************MAIN**********************/
+
 
 .title-australie {
   display: flex;
@@ -51,7 +54,7 @@
 }
 
 .img-australie1 {
-  width: 70%;
+  width: 28%;
   height: auto;
   clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
@@ -85,13 +88,13 @@
 
 
 .img-melbourne1 {
-    width: 80%;
+    width: 30%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-melbourne2 {
-    width: 75%;
+    width: 30%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0, 100% 100%, 0% 100%);
 }
@@ -130,13 +133,13 @@
 
 
 .img-goldcoast1 {
-    width: 90%;
+    width: 30%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-goldcoast2 {
-    width: 80%;
+    width: 30%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
 }
@@ -169,13 +172,13 @@
 }
 
 .img-sydney1 {
-    width: 80%;
+    width: 35%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-sydney2 {
-    width: 80%;
+    width: 30%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
 }
@@ -277,15 +280,13 @@
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 0;
+    bottom: -2%;
     left: 0;
     display: flex;
     overflow-x: scroll;
     counter-reset: item;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
-    max-width: 100vw;
-    max-height: 100vw;
   }
   
   .carousel__slide {
@@ -345,7 +346,7 @@
   .carousel__navigation {
     position: absolute;
     right: 0;
-    bottom: 0;
+    bottom: 2%;
     left: 0;
     text-align: center;
   }
