résolutions problémes page australie

--- a/css/australie.css
+++ b/css/australie.css
@@ -1,4 +1,6 @@
-
+body {
+  overflow-x: hidden;
+}
 
 
 .header-australie {
@@ -57,10 +59,17 @@
 }
 
 .img-australie1 {
-  width: 70%;
+  width: 30%;
   height: auto;
   clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
+
+.img-australie2 {
+  width: 30%;
+  height: auto;
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 0% 100%);
+}
+
 
 
 .melbourne1 {
@@ -91,13 +100,13 @@
 
 
 .img-melbourne1 {
-    width: 80%;
+    width: 35%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-melbourne2 {
-    width: 75%;
+    width: 35%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0, 100% 100%, 0% 100%);
 }
@@ -136,13 +145,13 @@
 
 
 .img-goldcoast1 {
-    width: 90%;
+    width: 30%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-goldcoast2 {
-    width: 80%;
+    width: 40%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
 }
@@ -175,13 +184,13 @@
 }
 
 .img-sydney1 {
-    width: 80%;
+    width: 35%;
     height: auto;
     clip-path: polygon(100% 0, 64% 100%, 0 100%, 0 0);
 }
 
 .img-sydney2 {
-    width: 80%;
+    width: 35%;
     height: auto;
     clip-path: polygon(50% 0, 100% 0%, 100% 100%, 0% 100%);
 }
@@ -284,7 +293,7 @@
     width: 100vw;
     top: 0;
     right: 0;
-    bottom: 0;
+    bottom: -2%;
     left: 0;
     display: flex;
     overflow-x: scroll;
