--- a/css/algerie.css
+++ b/css/algerie.css
@@ -1,10 +1,10 @@
 body{
     padding: 0;
     margin: 0;
-    background-image: url(/images/algerie/algérie_footer.jpg);
+    background-image: url(../images/algerie/algérie_footer.jpg);
     background-size: cover;
-    background-color:#323f45;
     background-attachment: fixed;
+    background-color:#323f45;
 }
 
 
